--- a/web/css/style.css
+++ b/web/css/style.css
@@ -6,6 +6,7 @@ body {
     align-items: center;
     height: 100vh;
     background-image: linear-gradient(45deg, #4322FF, #74F6F7);
+    /* какое-то изменение */
 }
 
 @media (min-width: 900px) {
